k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubii-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hubii-app
  template:
    metadata:
      labels:
        app: hubii-app
    spec:
      containers:
        - name: hubii-container
          image: hubii-devops-app
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
